exhibitions and investigations subsites

--- a/app/assets/stylesheets/exhibitions.css.scss
+++ b/app/assets/stylesheets/exhibitions.css.scss
@@ -104,7 +104,7 @@ footer._exhibitions {
   &.grenland {
     background-color: #fee100;
   }
-  background-color: #8F7BAF;
+  background-color: #ebb347;
   color: black;
   cursor: pointer;
   overflow: hidden;
