--- a/app/views/layouts/_dropdown.html.haml
+++ b/app/views/layouts/_dropdown.html.haml
@@ -1,14 +1,28 @@
+
 %li.select_menu
   %select.main_nav_select
-    %option{disabled: :disabled} Activities
+    %option{disabled: :disabled, selected: (@site.nil?  ? :selected : false)} Activities
     %optgroup{label: 'Research' }
-      %option{value: 'invitations'} Invitations
-      %option{value: 'fieldnotes'} Field_Notes
-      %option{value: 'investigations'} Investigations
-    %option.bi{value: 'exhibitions', selected: (@site.name == 'Exhibitions' && @activity.nil? ? :selected : false), id: :exgroup} EXHIBITIONS
+      %option{value: 'invitations', selected: (@site.try(:name) == 'Invitations' ? :selected : false)} Invitations
+      %option{value: 'fieldnotes', selected: (@site.try(:name) == 'Field_Notes' ? :selected : false)} Field_Notes
+      %option{value: 'investigations', selected: (@site.try(:name) == 'Investigations' ? :selected : false)} Investigations
+    %option.bi{value: 'exhibitions', selected: (@site.try(:name) == 'Exhibitions' && @activity.nil? ? :selected : false), id: :exgroup} EXHIBITIONS
     %option{value: 'grenland', class: :exhibition_select, selected: (request.url =~ /\/grenland/  ? :selected : false)} &nbsp;&nbsp;&nbsp; Kunsthall Grenland
     %option{value: 'nikolaj', class: :exhibition_select, selected: (request.url =~ /\/nikolaj/  ? :selected : false)} &nbsp; &nbsp;&nbsp;Nikolai Kunsthal
     %option{value: 'forumbox', class: :exhibition_select, selected: (request.url =~ /\/forumbox/  ? :selected : false)} &nbsp; &nbsp;&nbsp;Forum Box
 
 
-    
+= content_for :jquery do
+  :plain
+    $('select.main_nav_select').change(function() {
+      var selected = $("option:selected", this);
+      if(selected.hasClass("exhibition_select")) {
+        window.location.href= 'http://exhibitions.#{Rails.env.development? ? "local:3000" : (Rails.env.staging? ? "staging.hybridmatters.net" : "hybridmatters.net")}/' + $(this).val();
+      }
+      else {      
+        window.location.href= 'http://' + $(this).val() + '.hybridmatters.net';      
+      }
+    });
+    $('select.secondary_nav_select').change(function() {
+      window.location.href= $(this).val();
+    });
