--- a/app/views/layouts/activities.html.haml
+++ b/app/views/layouts/activities.html.haml
@@ -75,32 +75,30 @@
                       %option{selected: (controller.controller_name == 'partners' ? :selected : false), value: partners_path} Partners
                       %option{selected: (controller.controller_name == 'activities'  ? :selected : false), value: activities_path } Programme
                 %ul.top-bar-menu.hide-for-small-only
-                  %li
-                    %select.main_nav_select
-                      %option{selected: :selected, value: 'www'} Main site
-                      %option{value: 'fieldnotes'} Field_Notes
-                      %option{value: 'invitations'} Invitations
-                  %li{class: controller.controller_name == 'pages' && params[:id] == 'about' ? :active : false}= link_to 'About', page_path('about')
+                  = render partial: 'layouts/dropdown'
+                  
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'News', posts_path
                   %li{class: controller.controller_name == 'partners' ? :active : false}= link_to 'Partners', partners_path
                   %li{class: controller.controller_name == 'activities'  ? :active : false}= link_to 'Programme', activities_path
+                  %li{class: controller.controller_name == 'pages' && params[:id] == 'about' ? :active : false}= link_to 'About', page_path('about')
           .row.hide-for-small-only
             .down_arrow_wrapper
               .social &nbsp;
               .rest
                 %ul.top-bar-menu
-                  %li.select_spacer 
-                    %span
-                      %strong Field Notes
-
-                  %li{class: controller.controller_name == 'pages' && params[:id] == 'about' ? :active : false}
-                    %span About
+                  .together
+                    %li.select_menu
+                      &nbsp;&nbsp;&nbsp;&nbsp;
+                      %span
+                        %strong KUNSTHALL GRENLAND
                   %li{class: controller.controller_name == 'posts' ? :active : false}
                     %span News
                   %li{class: controller.controller_name == 'partners' ? :active : false}
                     %span Partners
                   %li{class: controller.controller_name == 'activities'  ? :active : false}
                     %span Programme
+                  %li.about{class: controller.controller_name == 'pages' ? :active : false}
+                    %span About
 
             
                 
