--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -77,33 +77,31 @@
                       %option{selected: (controller.controller_name == 'activities'  ? :selected : false), value: activities_path } Programme
                       
                 %ul.top-bar-menu.hide-for-small-only
-                  %li.about{class: controller.controller_name == 'pages' && params[:id] == 'about' ? :active : false}= link_to 'About', page_path('about')
-                  %li.select_menu
-                    %select.main_nav_select
-                      %option{selected: :selected, value: 'www'} HYBRID_MATTERs
-                      %option{value: 'fieldnotes'} Field_Notes
-                      %option{value: 'invitations'} Invitations
+                  
+                  = render partial: 'layouts/dropdown'
                   
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'News', posts_path
                   %li{class: controller.controller_name == 'partners' ? :active : false}= link_to 'Partners', partners_path
                   %li{class: controller.controller_name == 'activities'  ? :active : false}= link_to 'Programme', activities_path
+                  %li.about{class: controller.controller_name == 'pages' && params[:id] == 'about' ? :active : false}= link_to 'About', page_path('about')
           .row.hide-for-small-only
             .down_arrow_wrapper
               .social &nbsp;
               .rest
                 %ul.top-bar-menu
-                  .together{class: controller.controller_name == 'pages' ? :active : false}
-                    %li.about
-                      %span About
+                  .together
                     %li.select_menu
+                      &nbsp;&nbsp;&nbsp;&nbsp;
                       %span
-                        %strong HYBRID_MATTERs
+                        %strong KUNSTHALL GRENLAND
                   %li{class: controller.controller_name == 'posts' ? :active : false}
                     %span News
                   %li{class: controller.controller_name == 'partners' ? :active : false}
                     %span Partners
                   %li{class: controller.controller_name == 'activities'  ? :active : false}
                     %span Programme
+                  %li.about{class: controller.controller_name == 'pages' ? :active : false}
+                    %span About
       - if controller.controller_name == 'activities'
         %nav.activities-bar.sticky
           .hor-container.secondary_activities_filter
