--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -3,7 +3,7 @@
     - if index == 0
       .medium-2.columns.navigator.right
         .magellan-scrollnav
-          %div{:"data-magellan-expedition" => :fixed, :"data-options" => "threshold:100;destination_threshold:120;fixed_top:320" }
+          %div{:"data-magellan-expedition" => :fixed, :"data-options" => "threshold:120;destination_threshold:120;fixed_top:220;offset_by_height:false" }
             %dl.events_list
               - @events.each_with_index do |g, count|
                 %li= link_to (count + 1).to_s + ". " +  g.name, '#', onclick: "scrollTo('a[name=#{g.slug}]');return false;"
