--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -3,10 +3,11 @@
     - if index == 0
       .medium-2.columns.navigator.right
         .magellan-scrollnav
-          %div{:"data-magellan-expedition" => :fixed, :"data-options" => "threshold:120;destination_threshold:120;fixed_top:220;offset_by_height:false" }
-            %dl.events_list
-              - @events.each_with_index do |g, count|
-                %li= link_to (count + 1).to_s + ". " +  g.name, '#', onclick: "scrollTo('a[name=#{g.slug}]');return false;"
+          %div
+            -#{:"data-magellan-expedition" => :fixed, :"data-options" => "threshold:120;destination_threshold:120;fixed_top:220;offset_by_height:false" }
+            / %dl.events_list
+            /   - @events.each_with_index do |g, count|
+            /     %li= link_to (count + 1).to_s + ". " +  g.name, '#', onclick: "scrollTo('a[name=#{g.slug}]');return false;"
 
     .medium-2.columns.medium-offset-1.hide-for-small-only
       - if event.photos.empty?
@@ -14,7 +15,7 @@
       - else
 
         .front_icon= image_tag event.photos.first.image.url(:blog)
-    .small-12.columns.medium-offset-1.medium-6{class: index == 0 ? "" : "end"}
+    .small-12.columns.medium-offset-1.medium-6.end
       %a{name: event.slug }
       - if @site.nil?
         - if event.activity
