--- a/app/assets/stylesheets/exhibitions.css.scss
+++ b/app/assets/stylesheets/exhibitions.css.scss
@@ -94,7 +94,7 @@ footer._exhibitions {
 
   }
 }
-#sticky_field_notes_box {
+#sticky_exhibitions_box {
   &.forumbox {
     background-color: #FB8828;
   }
