--- a/app/views/layouts/invitations.html.haml
+++ b/app/views/layouts/invitations.html.haml
@@ -71,22 +71,22 @@
                       %option{selected: :selected, value: 'invitations'} Invitations
                   .small-5.columns
                     %select.secondary_nav_select
-                      %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: page_path('about-invitations') } About
+                      %option{selected: (controller.controller_name == 'pages' && params[:id] == 'about-invitations' ? :selected : false), value: page_path('about-invitations') } About
                       %option{selected: (controller.controller_name == 'posts' ? :selected : false), value: posts_path } Blog
                       %option{selected: (controller.controller_name == 'events' ? :selected : false), value: events_path} Events
-                      %option{selected: (controller.controller_name == 'postcategories' && params[:id] == 'speculations'  ? :selected : false), value: "/category/speculations"} Speculations              
+                      %option{selected: (controller.controller_name == 'pages' && params[:id] == 'speculations'  ? :selected : false), value: "pages/speculations"} Speculations              
                 %ul.top-bar-menu.hide-for-small-only
-                  %li.about{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about-invitations')
+                  %li.about{class: controller.controller_name == 'pages' && params[:id] == 'about-invitations' ? :active : false}= link_to 'About', page_path('about-invitations')
                   = render partial: 'layouts/dropdown'
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   %li{class: controller.controller_name == 'events' ? :active : false}= link_to 'Events', events_path
-                  %li{class: controller.controller_name == 'postcategories' && params[:id] == 'speculations' ? :active : false}= link_to 'Speculations', "/category/speculations"
+                  %li{class: controller.controller_name == 'pages' && params[:id] == 'speculations' ? :active : false}= link_to 'Speculations', "/pages/speculations"
           .row.hide-for-small-only
             .down_arrow_wrapper
               .social &nbsp;
               .rest
                 %ul.top-bar-menu
-                  .together{class: controller.controller_name == 'pages' ? :active : false}
+                  .together{class: controller.controller_name == 'pages' && params[:id] == 'about-invitations' ? :active : false}
                     %li.about
                       %span About
                     %li.select_menu
@@ -98,7 +98,7 @@
                     %span Blog
                   %li{class: controller.controller_name == 'events' ? :active : false}
                     %span Events
-                  %li{class: controller.controller_name == 'postcategories' && params[:id] == 'speculations' ? :active : false}
+                  %li{class: controller.controller_name == 'pages' && params[:id] == 'speculations' ? :active : false}
                     %span Speculations
       
                 
