floating box texts

--- a/app/views/layouts/_forumbox.html.haml
+++ b/app/views/layouts/_forumbox.html.haml
@@ -2,7 +2,7 @@
   .left.text-left PROGRAMME
   .text-right NOV-DEC 2016
 .title_box.text-center
-  .title= link_to 'HYBRID MATTERS EXHIBITION III', '/forumbox'
+  .title= link_to 'HYBRID MATTERs at FORUM BOX', '/forumbox'
   
 .blurb.text-center
-  touring exhibition in Helsinki
+  24th November until 18th December
