--- a/app/views/layouts/_grenland.html.haml
+++ b/app/views/layouts/_grenland.html.haml
@@ -2,7 +2,7 @@
   .left.text-left PROGRAMME
   .text-right MARCH 2016
 .title_box.text-center
-  .title= link_to 'HYBRID MATTERS EXHIBITION I', '/grenland'
+  .title= link_to 'HYBRID MATTERs at Kunsthall Grenland ', '/grenland'
   
 .blurb.text-center
-  touring exhibition in Porsgrun
+  19th March until 8th May
