--- a/app/views/layouts/_nikolaj.html.haml
+++ b/app/views/layouts/_nikolaj.html.haml
@@ -2,7 +2,7 @@
   .left.text-left PROGRAMME
   .text-right JULY 2016
 .title_box.text-center
-  .title= link_to 'HYBRID MATTERS EXHIBITION II', '/nikolaj'
+  .title= link_to 'HYBRID MATTERs at Nikolaj Kunsthal', '/nikolaj'
   
 .blurb.text-center
-  touring exhibition in Copenhagen
+  19th May until 31st July"
