--- a/app/views/layouts/_grenland.html.haml
+++ b/app/views/layouts/_grenland.html.haml
@@ -1,6 +1,6 @@
 .heading.ui-draggable-handle
   .left.text-left PROGRAMME
-  .text-right MARCH 2016
+  .text-right MAR-MAY 2016
 .title_box.text-center
   .title= link_to 'HYBRID MATTERs at Kunsthall Grenland ', '/grenland'
   
