--- a/app/views/layouts/investigations.html.haml
+++ b/app/views/layouts/investigations.html.haml
@@ -106,7 +106,8 @@
     .investigations_box.show-for-small-only
       .row
         .small-10.columns.text-center.small-centered.small-offset-1
-          Citizen art&science activities in different Nordic countries by researchers from Malmö University
+          Research into converging ecologies by researchers
+          from IT University Copenhagen
     .main-container.investigations
 
             
@@ -120,7 +121,8 @@
           .title= link_to 'HYBRID MATTERs Investigations', '/'
             
         .blurb.text-center
-          Research into converging ecologies
+          Research into converging ecologies by researchers
+          from IT University Copenhagen
             
       = content_for :jquery do
         :plain  
