--- a/app/views/layouts/_nikolaj.html.haml
+++ b/app/views/layouts/_nikolaj.html.haml
@@ -1,6 +1,6 @@
 .heading.ui-draggable-handle
   .left.text-left PROGRAMME
-  .text-right JULY 2016
+  .text-right MAY-JUL 2016
 .title_box.text-center
   .title= link_to 'HYBRID MATTERs at Nikolaj Kunsthal', '/nikolaj'
   
