--- a/app/views/layouts/field_notes.html.haml
+++ b/app/views/layouts/field_notes.html.haml
@@ -104,7 +104,7 @@
     .fnbox.show-for-small-only
       .row
         .small-10.columns.text-center.small-centered.small-offset-1
-          an art&science field laboratory about converging ecologies
+          an art&science field laboratory about converging ecologies by Bioartsociety
       
     .main-container.field_notes
 
@@ -119,7 +119,7 @@
           .title= link_to 'FIELD_NOTES HYBRID MATTERs', '/'
             
         .blurb.text-center
-          an art&science field laboratory about converging ecologies
+          an art&science field laboratory about converging ecologies by Bioartsociety
             
       = content_for :jquery do
         :plain  
