--- a/app/views/layouts/investigations.html.haml
+++ b/app/views/layouts/investigations.html.haml
@@ -75,13 +75,13 @@
                       %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: page_path('about-investigations') } About
                       %option{selected: (controller.controller_name == 'posts' ? :selected : false), value: posts_path } Blog
                       -#%option{selected: (controller.controller_name == 'events' ? :selected : false), value: events_path} Events
-                      -#%option{selected: (controller.controller_name == 'postcategories' && params[:id] == 'speculations'  ? :selected : false), value: "/category/speculations"} Speculations              
+                      %option{selected: (controller.controller_name == 'pages' && params[:id] == 'activities'  ? :selected : false), value: page_path('activities')} Activities              
                 %ul.top-bar-menu.hide-for-small-only
                   %li.about{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about-investigations')
                   = render partial: 'layouts/dropdown'
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   -#%li{class: controller.controller_name == 'events' ? :active : false}= link_to 'Events', events_path
-                  -#%li{class: controller.controller_name == 'postcategories' && params[:id] == 'speculations' ? :active : false}= link_to 'Speculations', "/category/speculations"
+                  %li{class: controller.controller_name == 'pages' && params[:id] == 'activities' ? :active : false}= link_to 'Activities', page_path('activities')
           .row.hide-for-small-only
             .down_arrow_wrapper
               .social &nbsp;
