--- a/app/views/layouts/_nikolaj.html.haml
+++ b/app/views/layouts/_nikolaj.html.haml
@@ -5,4 +5,4 @@
   .title= link_to 'HYBRID MATTERs at Nikolaj Kunsthal', '/nikolaj'
   
 .blurb.text-center
-  19th May until 31st July"
+  19th May until 31st July
