--- a/app/assets/stylesheets/exhibitions.css.scss
+++ b/app/assets/stylesheets/exhibitions.css.scss
@@ -395,5 +395,14 @@ footer._exhibitions {
   
 }
 
+.work_description {
+  padding-top: 1.5rem;
+}
 
+.work_description, .work_description p {
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+  color: #222;
+  font-weight: 300;
+}
 
