--- a/app/views/layouts/exhibitions.html.haml
+++ b/app/views/layouts/exhibitions.html.haml
@@ -72,7 +72,7 @@
                       - else
                         %option{selected: (controller.controller_name == 'pages' ? :active : false), value: "/#{params[:place]}"} Curatorial Statement
                       %option{selected: (controller.controller_name == 'works' ? :selected : false), value: "/#{params[:place].nil? ? "" : params[:place] + "/"}works"} Works
-                      %option{selected: (controller.controller_name == 'posts' ? :selected : false), value: params[:place].to_s + '/posts' } Blog
+                      %option{selected: (controller.controller_name == 'posts' ? :selected : false), value: "/#{params[:place].nil? ? "" : params[:place] + "/"}posts"} Blog
                       
                 %ul.top-bar-menu.hide-for-small-only
                   / %li.about{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about-field-notes-hybrid-matters')
@@ -84,7 +84,7 @@
                     - else
                       = link_to 'Curatorial Statement', "/#{params[:place]}"
                   %li{class: controller.controller_name == 'works' ? :active : false}= link_to 'Works', "/#{params[:place].nil? ? "" : params[:place] + "/"}works"
-                  %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', params[:place].to_s + '/posts'
+                  %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', "/#{params[:place].nil? ? "" : params[:place] + "/"}posts"
           
           .row.hide-for-small-only
             .down_arrow_wrapper
