--- a/app/views/admin/works/_form.html.haml
+++ b/app/views/admin/works/_form.html.haml
@@ -11,7 +11,7 @@
   .row
     .small-12.large-6.columns= f.input :title, input_html: {required: ''}
   .row
-    .small-12.large-6.columns= f.input :artist, as: :select, collection: Artist.all, input_html: {required: ''}
+    .small-12.large-6.columns= f.input :artist_ids, as: :select, collection: Artist.all, input_html: {class: :chosen_select, required: ''}, multiple: true, label: 'Artist(s)'
   .row
     .small-12.large-6.columns= f.input :activities, as: :check_boxes, label: 'Exhibitions', collection: Activitytype.where(name: 'Exhibitions').map(&:activities).flatten, input_html: { required: ''}
   .row  
@@ -31,3 +31,8 @@
 
   .row
     .small-12.large-6.columns= f.submit 'Save', class: [:button, :small]
+= content_for :jquery do 
+  :plain  
+
+
+    $('.chosen_select').chosen();
