--- a/app/views/admin/works/_form.html.haml
+++ b/app/views/admin/works/_form.html.haml
@@ -21,7 +21,7 @@
   .row
     .small-12.large-7.columns
       = f.fields_for :photos do |ff|
-        = if ff.object.image?
+        - if ff.object.image?
           = image_tag ff.object.image.url(:box)
         = ff.input :image
         = ff.link_to_remove "Remove this photo"
